created indew.html > created style.css, created test.html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,102 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/grid.css">
-        <link rel="icon" href="images/favicon.png"/>
+
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
+        <h1>Présentation du framework CSS</h1>
 
+
+        <h2>Règles de reset.css</h2>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+
+        <h2>Règles de grid.css</h2>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+
+        <h2>Règles de nav.css</h2>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+
+        <!--
+            <div class="contain">
+            <div style="background-color:red">
+            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+            Salut
+            </div>
+            </div>
+        -->
 
     </body>
 </html>
