--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>CSS Framework</title>
+        <title>CSS Framework - TEST</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/grid.css">
