added image in test.html

--- a/test.html
+++ b/test.html
@@ -85,7 +85,7 @@
         </a>
         </nav>
 
-        <img src="#" alt="Useless">
+        <img src="trololo.jpg" alt="Useless">
 
         TEXTE DE <mark>REMPLISSAGE</mark>
 
