--- a/test.html
+++ b/test.html
@@ -7,6 +7,9 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/grid.css">
+        <link rel="stylesheet" href="css/utils.css">
+
+        <link rel="stylesheet" href="test.css">
     </head>
     <body>
 
@@ -74,15 +77,15 @@
         </a>
 
         <nav>
-        <a href="#">
-            TEXTE DE REMPLISSAGE
-        </a>
-        <a href="#">
-            TEXTE DE REMPLISSAGE
-        </a>
-        <a href="#">
-            TEXTE DE REMPLISSAGE
-        </a>
+            <a href="#">
+                TEXTE DE REMPLISSAGE
+            </a>
+            <a href="#">
+                TEXTE DE REMPLISSAGE
+            </a>
+            <a href="#">
+                TEXTE DE REMPLISSAGE
+            </a>
         </nav>
 
         <img src="trololo.jpg" alt="Useless">
@@ -175,6 +178,371 @@
         <footer>
             TEXTE DE REMPLISSAGE
         </footer>
+
+
+        <h2>Test de utils.css</h2>
+        <h3>Padding Top</h3></h3>
+    <div class="util-container PADDING-TOP1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-TOP25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Padding Right</h3>
+    <div class="util-container PADDING-RIGHT1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-RIGHT25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Padding Bottom</h3>
+    <div class="util-container PADDING-BOTTOM1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-BOTTOM25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Padding Left</h3>
+    <div class="util-container PADDING-LEFT1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING-LEFT25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Padding All</h3>
+    <div class="util-container PADDING1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container PADDING25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Margin Top</h3>
+    <div class="util-container MARGIN-TOP1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-TOP25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Margin Right</h3>
+    <div class="util-container MARGIN-RIGHT1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-RIGHT25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Margin Bottom</h3>
+    <div class="util-container MARGIN-BOTTOM1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-BOTTOM25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Margin Left</h3>
+    <div class="util-container MARGIN-LEFT1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN-LEFT25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Margin All</h3>
+    <div class="util-container MARGIN1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN10">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN15">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN20">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container MARGIN25">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Border Top</h3>
+    <div class="util-container BORDER-TOP1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-TOP2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-TOP3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-TOP4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-TOP5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Border Right</h3>
+    <div class="util-container BORDER-RIGHT1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-RIGHT2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-RIGHT3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-RIGHT4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-RIGHT5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Border Bottom</h3>
+    <div class="util-container BORDER-BOTTOM1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-BOTTOM2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-BOTTOM3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-BOTTOM4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-BOTTOM5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Border Left</h3>
+    <div class="util-container BORDER-LEFT1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-LEFT2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-LEFT3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-LEFT4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER-LEFT5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <h3>Border All</h3>
+    <div class="util-container BORDER1">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER2">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER3">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER4">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+    <div class="util-container BORDER5">
+        X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X X
+    </div>
+
+
 
     </body>
 </html>
