--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/grid.css">
+        <link rel="stylesheet" href="css/utils/css">
 
         <link rel="stylesheet" href="style.css">
     </head>
