updated index.html to add utils.css

--- a/index.html
+++ b/index.html
@@ -94,6 +94,32 @@
             </div>
         </div>
 
+        <h2>Règles de utils.css</h2>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+        <div class="contain">
+            <div style="background-color:red">
+                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+            </div>
+            <div style="background-color:blue">
+                Salut
+            </div>
+        </div>
+
         <!--
             <div class="contain">
             <div style="background-color:red">
