improved index.html (added #wrapper, header, main (article, article section, section h3), footer), improved example.html (copied from index.html)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>CSS Framework - DEMO</title>
+        <title>CSS Framework - PRESENTATION</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/grid.css">
@@ -13,115 +13,174 @@
     </head>
     <body>
 
-        <h1>Présentation du framework CSS</h1>
+        <div id="wrapper">
+            <header>
+                <h1>Présentation du framework CSS</h1>
+            </header>
 
+            <main>
+            <article>
+                <h2>Règles de reset.css</h2>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+            </article>
 
-        <h2>Règles de reset.css</h2>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
+            <article>
+                <h2>Règles de grid.css</h2>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+            </article>
 
-        <h2>Règles de grid.css</h2>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
+            <article>
+                <h2>Règles de nav.css</h2>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+            </article>
 
-        <h2>Règles de nav.css</h2>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
+            <article>
+                <h2>Règles de utils.css</h2>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+                <section>
+                    <h3>Titre</h3>
+                    <div class="rule-container">
+                        <div style="background-color:red">
+                            Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
+                        </div>
+                        <div style="background-color:blue">
+                            Salut
+                        </div>
+                    </div>
+                </section>
+            </article>
+            </main>
 
-        <h2>Règles de utils.css</h2>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
-        </div>
-        <div class="contain">
-            <div style="background-color:red">
-                Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
-            </div>
-            <div style="background-color:blue">
-                Salut
-            </div>
+            <footer>
+                <h2>
+                    <a href="example.html">
+                        Exemple
+                    </a>
+                </h2>
+            </footer>
         </div>
 
         <!--
-            <div class="contain">
+            <section>
+            <h3>Titre</h3>
+            <div class="rule-container">
             <div style="background-color:red">
             Texte de remplissage servant à décrire, expliquer et présenter une fonctionnalité présentée dans la div à droite de celle-ci
             </div>
@@ -129,6 +188,7 @@
             Salut
             </div>
             </div>
+            </section>
         -->
 
     </body>
