--- a/example.html
+++ b/example.html
@@ -7,13 +7,29 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/nav.css">
         <link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/utils.css">
+        <link rel="stylesheet" href="css/utils/css">
 
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
 
-        <h1>Exemple d'utilisation du framework CSS</h1>
+        <div id="wrapper">
+            <header>
+                <h1>Exemple d'utilisation du framework CSS</h1>
+            </header>
+
+            <main>
+
+            </main>
+
+            <footer>
+                <h2>
+                    <a href="index.html">
+                        présentation
+                    </a>
+                </h2>
+            </footer>
+        </div>
 
     </body>
 </html>
