menu déroulant et sous-menus

--- a/testmenu.html
+++ b/testmenu.html
@@ -6,25 +6,32 @@
   </head>
 
   <body>
-    <nav>
-      <ul class="menu">
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À propos</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À propos</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À propos</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À propos</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Accueil</a></li>
-        <li><a href="#">À propos</a></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Accueil</a></li>
-      </ul>
-    </nav>
+    <ul class="menu">
+      <li><a href="#">Accueil</a></li>
+      <li><a href="#">À propos</a></li>
+      <li><a href="#">Contact</a></li>
+      <li><a href="#">Accueil</a></li>
+      <li><a href="#">À propos</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+
+    <ul class="menu">
+    	<li><a href="#">Lien menu 1</a>
+    		<ul class="menu menu-vertical sous-menu">
+    			<li><a href="#">lien sous menu 1</a></li>
+    			<li><a href="#">lien sous menu 1</a></li>
+    			<li><a href="#">lien sous menu 1</a></li>
+    			<li><a href="#">lien sous menu 1</a></li>
+    		</ul>
+    	</li><!--
+   --><li><a href="#">Lien menu 2</a>
+    		<ul class="menu menu-vertical sous-menu">
+    			<li><a href="#">Lien sous menu 2</a></li>
+    			<li><a href="#">Lien sous menu 2</a></li>
+    			<li><a href="#">Lien sous menu 2</a></li>
+    			<li><a href="#">Lien sous menu 2</a></li>
+    		</ul>
+    	</li>
+    </ul>
   </body>
 </html>
