--- a/test2.html
+++ b/test2.html
@@ -1,31 +1,51 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>CSS Framework - TEST</title>
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/nav.css">
-        <link rel="stylesheet" href="css/grid.css">
-        <link rel="stylesheet" href="css/utils.css">
-        <link rel="stylesheet" href="test.css">
-    </head>
-    <body>
-      <div></div>
-          <div></div>
-              <div></div>
-                  <div></div>
-                  <div></div>
-                      <div></div>
-                          <div></div>
-                              <div></div>
-                              <div></div>
-                                  <div></div>
-                                      <div></div>
-                                          <div></div>
-                                          <div></div>
-                                              <div></div>
-                                                  <div></div>
-                                                      <div></div>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CSS Framework - TEST</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/utils.css">
+    <link rel="stylesheet" href="test.css">
+</head>
+
+<body>
+    <div class="casesizex1 lol">
+    <div class="grid">
+        <div class="casesizex2">lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+        <div>lel</div>
+    </div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+    <div>lel</div>
+
+    </div>
+</body>
+
 </html>
